--- a/about.html
+++ b/about.html
@@ -1,7 +1,39 @@
-<html>
+<!DOCTYPE html>
+<html lang='en'>
 <head>
-  <title>Kool-Aid | About</title>
+  <link rel='stylesheet' type='text/css' href='bootstrap.css'>
+  <title>Kool-Aid | About Us</title>
 </head>
 <body>
+  <header>
+    <nav class='shaedycultlogo'>
+      <a href='index.html'>
+        <img src='images/logo.svg' alt='Shaedycult Logo' height='37'>
+      </a>
+    </nav>
+    <div class='headerlinks'>
+      <a href='contact.html'>CONTACT</a>
+      <a href='about.html'>ABOUT US</a>
+    </div>
+  </header>
+
+  <footer>
+    <div class='footerlinks'>
+      <nav class='navlinks'>
+        <a href='index.html'>HOME</a>
+        <a href='about.html' color='white'>ABOUT US</a>
+        <a href='contact.html'>CONTACT</a>
+      </nav>
+
+      <nav class='sociallinks'>
+        <img src='Images/instagram.svg' alt='Instagram icon'>
+        <img src='Images/facebook.svg' alt='Facebook icon'>
+        <img src='Images/twitter.svg' alt='Twitter icon'>
+      </nav>
+    </div>
+    <div class='copyright'>
+      <p>&copy ShaedyCult 2016</p>
+    </div>
+  </footer>
 </body>
 </html>
