--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
       margin-top: -60px;
       line-height: 75%;
       background-color: #FF8ED8;
+      animation-name: buttoncolors;
+      animation-duration: 4s;
+      animation-iteration-count: infinite;
       font-family: 'Raleway', sans-serif;
       font-weight: 800;
       font-size: 24px;
@@ -57,6 +60,19 @@
       float: left;
       width: 550px;
     }
+    @keyframes buttoncolors{
+      0%   {background-color: #FF8ED8; border-radius: 40px; height: 80px; padding-top: 30px; margin-top: -60px;}
+      60%  {background-color: #FF8ED8; border-radius: 40px; height: 80px; padding-top: 30px; margin-top: -60px;}
+      80%  {background-color: #EC5EF9; border-radius: 60px; height: 100px; padding-top: 40px; margin-top: -70px;}
+      100% {background-color: #FF8ED8; border-radius: 40px; height: 80px; padding-top: 30px; margin-top: -60px;}
+
+    }
+    div {
+
+
+    animation-name: example;
+    animation-duration: 4s;
+}
   </style>
 </head>
 
