Fix capitalization issues.
Fix folder capitalization so pages can find images.

--- a/contact.html
+++ b/contact.html
@@ -167,9 +167,9 @@
         </nav>
 
         <nav class='sociallinks'>
-          <img src='Images/instagram.svg' alt='Instagram icon'>
-          <img src='Images/facebook.svg' alt='Facebook icon'>
-          <img src='Images/twitter.svg' alt='Twitter icon'>
+          <img src='images/instagram.svg' alt='Instagram icon'>
+          <img src='images/facebook.svg' alt='Facebook icon'>
+          <img src='images/twitter.svg' alt='Twitter icon'>
         </nav>
       </div>
       <div class='copyright'>
