--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <div class='bodycontent'>
     <div class='imagearea'>
-      <img src='Images/sodacans.png' alt='Pink soda labelled Kool-aid' width='550px' float left>
+      <img src='images/sodacans.png' alt='Pink soda labelled Kool-aid' width='550px' float left>
     </div>
 
     <div class='textarea'>
@@ -110,9 +110,9 @@
       </nav>
 
       <nav class='sociallinks'>
-        <img src='Images/instagram.svg' alt='Instagram icon'>
-        <img src='Images/facebook.svg' alt='Facebook icon'>
-        <img src='Images/twitter.svg' alt='Twitter icon'>
+        <img src='images/instagram.svg' alt='Instagram icon'>
+        <img src='images/facebook.svg' alt='Facebook icon'>
+        <img src='images/twitter.svg' alt='Twitter icon'>
       </nav>
     </div>
     <div class='copyright'>
